--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <div class="animatedName">
             <svg
               class="logo"
-              width="600"
-              height="100"
+              width="800"
+              height="150"
               viewBox="0 0 358 55"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -136,20 +136,23 @@
             </div>
             <div class="aboutTxt">
               <p>
-                Hi I'm Nathaniel more commonly known as Nate. I am a Front-End
-                Web Developer based out of Oakville and a recent graduate of
-                Juno College of Technology. I am also a graduate of the
-                University of Toronto and Sheridan College with an Honours
-                Bachelors of Arts and a certificate of digital communications.
-                As an individual that loves to learn, I am always challenging
-                myself to stay on top of new tools and web-development content.
-                When it comes to development and design, my goal is to create
-                applications that are responsive, accessible, creative and
-                minimalistic.
+                Hi I'm Nate, nice to meet you! I am a Web Developer based out of 
+                Oakville and a graduate of Juno College of Technology's 
+                web development bootcamp. I am also a graduate of the
+                University of Toronto and Sheridan College earning a Honours
+                Bachelors of Arts and a certificate of digital communications respectively.
+                Through my background in the technology field, I have been able 
+                to develop a unique skill set that helps me design and create products 
+                whilst ensuring an optimal user experience for all. When it comes to development
+                and design, my goal is to create applications that are responsive, accessible, 
+                creative, minimalistic and inclusive.
               </p>
               <p class="secondP">
-                Aside from coding, I enjoy watching and playing sports, playing
-                video games, traveling, and photography.
+                As an individual with a growth mindset, I am always challenging myself to imporve 
+                in the skills that I already have while pushing myself to better myself with new or foreign skills.
+                This is something I apply to every aspect of my life. With that said I am currently learning to boulder 
+                and would be very open to any tips. Aside from projects and bouldering, you can find me watching or playing 
+                various sports, dabbling in some video games or messing around with a camera.
               </p>
               <div class="aboutLinks">
                 <a href="https://www.canva.com/design/DAEdcV-9za4/Ep4mw7mfMLq7iQpXYNkgHg/view?utm_content=DAEdcV-9za4&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank">Resume</a>
