fixed border radius

--- a/index.html
+++ b/index.html
@@ -288,18 +288,18 @@
               <h4>Made with</h4>
               <ul class="projectsIcons">
                 <li>
-                  <img src="./assets/inkscapeIcon.svg" alt="Inkscape icon" />
+                  <img src="./assets/inkscapeIcon.svg" alt="Inkscape icon" title="Inkscape" />
                 </li>
-                <li><img src="./assets/htmlIcon.svg" alt="HTML icon" /></li>
-                <li><img src="./assets/sassIcon.svg" alt="SASS icon" /></li>
+                <li><img src="./assets/htmlIcon.svg" alt="HTML icon" title="HTML"/></li>
+                <li><img src="./assets/sassIcon.svg" alt="SASS icon" title="SASS"/></li>
                 <li>
                   <img
                     src="./assets/javascriptIcon.svg"
                     alt="Javascript icon"
                   />
                 </li>
-                <li><img src="./assets/apiIcon.svg" alt="API icon" /></li>
-                <li><img src="./assets/gitIcon.svg" alt="Git icon" /></li>
+                <li><img src="./assets/apiIcon.svg" alt="API icon" title="API"/></li>
+                <li><img src="./assets/gitIcon.svg" alt="Git icon" title="Git"/></li>
               </ul>
             </div>
           </div>
@@ -334,12 +334,12 @@
               </div>
               <h4>Made with</h4>
               <ul class="projectsIcons">
-                <li><img src="./assets/reactIcon.svg" alt="React icon" /></li>
-                <li><img src="./assets/cssIcon.svg" alt="CSS icon" /></li>
+                <li><img src="./assets/reactIcon.svg" alt="React icon" title="React"/></li>
+                <li><img src="./assets/cssIcon.svg" alt="CSS icon" title="CSS"/></li>
                 <li>
-                  <img src="./assets/firebaseIcon.svg" alt="Firebase icon" />
+                  <img src="./assets/firebaseIcon.svg" alt="Firebase icon" title="Firebase"/>
                 </li>
-                <li><img src="./assets/gitIcon.svg" alt="Git icon" /></li>
+                <li><img src="./assets/gitIcon.svg" alt="Git icon" title="Git"/></li>
               </ul>
             </div>
           </div>
@@ -377,14 +377,14 @@
               </div>
               <h4>Made with</h4>
               <ul class="projectsIcons">
-                <li><img src="./assets/figmaIcon.svg" alt="Figma icon" /></li>
-                <li><img src="./assets/reactIcon.svg" alt="React icon" /></li>
-                <li><img src="./assets/cssIcon.svg" alt="CSS icon" /></li>
-                <li><img src="./assets/apiIcon.svg" alt="API icon" /></li>
+                <li><img src="./assets/figmaIcon.svg" alt="Figma icon" title="Figma"/></li>
+                <li><img src="./assets/reactIcon.svg" alt="React icon" title="React"/></li>
+                <li><img src="./assets/cssIcon.svg" alt="CSS icon" title="CSS"/></li>
+                <li><img src="./assets/apiIcon.svg" alt="API icon" title="API"/></li>
                 <li>
-                  <img src="./assets/firebaseIcon.svg" alt="Firebase icon" />
+                  <img src="./assets/firebaseIcon.svg" alt="Firebase icon" title="Firebase"/>
                 </li>
-                <li><img src="./assets/gitIcon.svg" alt="Git icon" /></li>
+                <li><img src="./assets/gitIcon.svg" alt="Git icon" title="Git"/></li>
               </ul>
             </div>
           </div>
@@ -422,8 +422,8 @@
                 </div>
                 <h4>Made with</h4>
                 <ul class="projectsIcons">
-                  <li><img src="./assets/htmlIcon.svg" alt="HTML icon" /></li>
-                  <li><img src="./assets/cssIcon.svg" alt="CSS icon" /></li>
+                  <li><img src="./assets/htmlIcon.svg" alt="HTML icon" title="HTML"/></li>
+                  <li><img src="./assets/cssIcon.svg" alt="CSS icon" title="CSS" /></li>
                 </ul>
               </div>
             </div>
