added Other Projects

--- a/index.html
+++ b/index.html
@@ -428,6 +428,36 @@
               </div>
             </div>
           </section>
+          <section class="otherProjs">
+            <h3 class="wipH3">Other Projects</h3>
+            <div class="projectGrouping">
+              <div class="screenShots">
+                <video width="100%" height="100%" autoplay loop>
+                  <source src="./assets/StarAvoiderGP.mp4"> 
+                </video> 
+                
+              </div>
+              <div class="projectTxt">
+                <h3>Star Avoider</h3>
+                <p>
+                  Star Avoider is a arcade style game created specifically for the Mac OS. 
+                  Users are to use the arrow keys on their keyboard to control the UFO in order to avoid the starts. 
+                  The score counts as long as the UFO stays alive. Users have three total lives and once they run out of lives the game will end.
+                  The UFO and stars were created using Adobe Illustrator and turned into sprites through Unity. 
+                  The game was coded using C#. Since I am not proficient in C#, I refrenced code from Blackthornprod's YouTube series 
+                  "How to make a simple game in unity - endless runner". 
+                </p>
+                <div class="noView">
+                 <p>To find out more feel free to contact me!</p>
+                </div>
+                <h4>Made with</h4>
+                <ul class="projectsIcons">
+                  <li><img src="./assets/unityLogo.svg" alt="Unity Logo" title="Unity Logo"/></li>
+                  <li><img src="./assets/adobeIcon.svg" alt="Adobe Icon" title="Adobe Icon" /></li>
+                </ul>
+              </div>
+            </div>
+          </section>
         </div>
       </section>
 
