finished adding Star Avoider

--- a/index.html
+++ b/index.html
@@ -244,6 +244,14 @@
               <img src="./assets/apiIcon.svg" alt="API icon" title="API" />
               <p>API</p>
             </div>
+            <div class="iconGrp">
+              <img src="./assets/csharpLogo.svg" alt="C# icon" title="C#" />
+              <p>C#</p>
+            </div>
+            <div class="iconGrp">
+              <img src="./assets/unityLogo.svg" alt="Unity icon" title="Unity" />
+              <p>Unity</p>
+            </div>
           </div>
         </div>
       </section>
@@ -452,8 +460,9 @@
                 </div>
                 <h4>Made with</h4>
                 <ul class="projectsIcons">
-                  <li><img src="./assets/unityLogo.svg" alt="Unity Logo" title="Unity Logo"/></li>
-                  <li><img src="./assets/adobeIcon.svg" alt="Adobe Icon" title="Adobe Icon" /></li>
+                  <li><img src="./assets/unityLogo.svg" alt="Unity icon" title="Unity"/></li>
+                  <li><img src="./assets/adobeIcon.svg" alt="Adobe icon" title="Adobe" /></li>
+                  <li><img src="./assets/csharpLogo.svg" alt="C# icon" title="C#" /></li>
                 </ul>
               </div>
             </div>
