fixed a bunch of stuff

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </svg>
           </div>
 
-          <h1>Web Development & Design</h1>
+          <h1>Web Development, Design & Constant Learning</h1>
         </div>
         <div class="headerIcon">
           <a href="#about">
@@ -136,23 +136,21 @@
             </div>
             <div class="aboutTxt">
               <p>
-                Hi I'm Nate, nice to meet you! I am a Web Developer based out of 
-                Oakville and a graduate of Juno College of Technology's 
-                web development bootcamp. I am also a graduate of the
-                University of Toronto and Sheridan College earning a Honours
-                Bachelors of Arts and a certificate of digital communications respectively.
-                Through my background in the technology field, I have been able 
-                to develop a unique skill set that helps me design and create products 
-                whilst ensuring an optimal user experience for all. When it comes to development
-                and design, my goal is to create applications that are responsive, accessible, 
-                creative, minimalistic and inclusive.
+                Hi I'm Nate, nice to meet you! I am a Web Developer by trade 
+                but I am always looking for ways to expand my skill set. I am a graduate of
+                Juno College of Technology's web development bootcamp, the University of Toronto and Sheridan College 
+                joint CCIT program earning a Honours Bachelors of Arts and a certificate of digital communications respectively.
               </p>
               <p class="secondP">
                 As an individual with a growth mindset, I am always challenging myself to imporve 
                 in the skills that I already have while pushing myself to better myself with new or foreign skills.
                 This is something I apply to every aspect of my life. With that said I am currently learning to boulder 
                 and would be very open to any tips. Aside from projects and bouldering, you can find me watching or playing 
-                various sports, dabbling in some video games or messing around with a camera.
+                various sports, dabbling in some video games or messing around with a camera. To make getting to know me even easier I've added hashtags below. 
+                If you recognize any of the hashtags, you know we could be great friends. If not, we can still be (just) friends.
+              </p>
+              <p class="hashtags">
+                #WeTheNorth, #MUFC, #VivaRonaldo, #RiseUpRedSea
               </p>
               <div class="aboutLinks">
                 <a href="https://www.canva.com/design/DAEdcV-9za4/Ep4mw7mfMLq7iQpXYNkgHg/view?utm_content=DAEdcV-9za4&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank">Resume</a>
@@ -448,12 +446,12 @@
               <div class="projectTxt">
                 <h3>Star Avoider</h3>
                 <p>
-                  Star Avoider is a arcade style game created specifically for the Mac OS. 
-                  Users are to use the arrow keys on their keyboard to control the UFO in order to avoid the starts. 
+                  Star Avoider is an arcade style game created specifically for the Mac OS.
+                  Users are to use the arrow keys on their keyboard to control the UFO in order to avoid the stars.
                   The score counts as long as the UFO stays alive. Users have three total lives and once they run out of lives the game will end.
-                  The UFO and stars were created using Adobe Illustrator and turned into sprites through Unity. 
-                  The game was coded using C#. Since I am not proficient in C#, I refrenced code from Blackthornprod's YouTube series 
-                  "How to make a simple game in unity - endless runner". 
+                  The UFO and stars were created using Adobe Illustrator and turned into sprites through Unity.
+                  The game was coded using C#. Since I am not proficient in C#, I referenced code from Blackthornprod's YouTube series
+                  "How to make a simple game in unity - endless runner".
                 </p>
                 <div class="noView">
                  <p>To find out more feel free to contact me!</p>
@@ -466,6 +464,25 @@
                 </ul>
               </div>
             </div>
+            <div class="projectGrouping evenGroup">
+              <div class="screenShots even">
+                <video width="100%" height="100%" controls>
+                  <source src="./assets/shakenUp.mp4"> 
+                </video> 
+              </div>
+              <div class="projectTxt evenTxt">
+                <h3>Shaken Up</h3>
+                <p>
+                  Inspired by Pixar's short animation "Knick Knack", Shaken Up is a 2D animation 
+                  I created as my final project for an introduction to animation course I took while at Sheridan College.
+                  It is a story about a snowman that doesn't realize it is in a snow globe until it is shaken. 
+                  This project was created entirely through Adobe Animate. 
+                </p>
+                <h4>Made with</h4>
+                <ul class="projectsIcons">
+                  <li><img src="./assets/adobeIcon.svg" alt="Adobe icon" title="Adobe"/></li>
+                </ul>
+              </div>
           </section>
         </div>
       </section>
