--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             <h3 class="wipH3">Other Projects</h3>
             <div class="projectGrouping">
               <div class="screenShots">
-                <video width="100%" height="100%" autoplay loop>
+                <video width="100%" height="100%" autoplay loop muted>
                   <source src="./assets/StarAvoiderGP.mp4"> 
                 </video> 
                 
