fixing up portfolio

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </svg>
           </div>
 
-          <h1>Web Development, Design & Constant Learning</h1>
+          <h1>Web Development & Design</h1>
         </div>
         <div class="headerIcon">
           <a href="#about">
