changed my about para

--- a/index.html
+++ b/index.html
@@ -136,22 +136,12 @@
             </div>
             <div class="aboutTxt">
               <p>
-                Hi I'm Nate, nice to meet you! I am a Web Developer by trade 
-                but I am always looking for ways to expand my skill set. I am a graduate of
-                Juno College of Technology's web development bootcamp, the University of Toronto and Sheridan College 
-                joint CCIT program earning a Honours Bachelors of Arts and a certificate of digital communications respectively.
+                Hi I'm Nate, I am a web developer and designer based out of Oakville, Ontario. Having graduated from Juno College's web development bootcamp in May of 2021, I have been exploring ways to expand my expertise and find work that I fill fulfilled in. I have always had a passion for technology and world issues, having double majored in Communications, Culture, Information and Technology, and Environmental Management at the University of Toronto and Sheridan College. 
               </p>
               <p class="secondP">
-                As an individual with a growth mindset, I am always challenging myself to imporve 
-                in the skills that I already have while pushing myself to better myself with new or foreign skills.
-                This is something I apply to every aspect of my life. With that said I am currently learning to boulder 
-                and would be very open to any tips. Aside from projects and bouldering, you can find me watching or playing 
-                various sports, dabbling in some video games or messing around with a camera. To make getting to know me even easier I've added hashtags below. 
-                If you recognize any of the hashtags, you know we could be great friends. If not, we can still be (just) friends.
+                While I am ideally looking for a way to work in a field that can combine my two passions, I am open and always willing to learn new things. As an individual with a growth mindset, I am always pushing to better myself and this is something I apply to every aspect of my life. 
               </p>
-              <p class="hashtags">
-                #WeTheNorth, #MUFC, #VivaRonaldo, #RiseUpRedSea
-              </p>
+              
               <div class="aboutLinks">
                 <a href="https://www.canva.com/design/DAEdcV-9za4/Ep4mw7mfMLq7iQpXYNkgHg/view?utm_content=DAEdcV-9za4&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank">Resume</a>
                 <a href="https://github.com/NateY98" target="_blank">GitHub</a>
