fixed up some stuff

--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
                 Hi I'm Nate, I am a web developer and designer based out of Oakville, Ontario. Having graduated from Juno College's web development bootcamp in May of 2021, I have been exploring ways to expand my expertise and find work that I fill fulfilled in. I have always had a passion for technology and world issues, having double majored in Communications, Culture, Information and Technology, and Environmental Management at the University of Toronto and Sheridan College. 
               </p>
               <p class="secondP">
-                While I am ideally looking for a way to work in a field that can combine my two passions, I am open and always willing to learn new things. As an individual with a growth mindset, I am always pushing to better myself and this is something I apply to every aspect of my life. 
+                While it would be nice to find work that mixes both my passions, I am overall looking for an environment that can help me grow as a professional. Being an individual with a growth mindset, I am always pushing to better myself and this is something I apply to every aspect of my life. 
               </p>
               
               <div class="aboutLinks">
-                <a href="https://www.canva.com/design/DAEdcV-9za4/Ep4mw7mfMLq7iQpXYNkgHg/view?utm_content=DAEdcV-9za4&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank">Resume</a>
+                <a href="https://www.canva.com/design/DAEumGrSrMI/lCp1MT9PD_uOhYEYM7vrYA/view?utm_content=DAEumGrSrMI&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank">Resume</a>
                 <a href="https://github.com/NateY98" target="_blank">GitHub</a>
                 <a href="#contact"> Contact</a>
               </div>
@@ -231,10 +231,6 @@
             <div class="iconGrp">
               <img src="./assets/apiIcon.svg" alt="API icon" title="API" />
               <p>API</p>
-            </div>
-            <div class="iconGrp">
-              <img src="./assets/csharpLogo.svg" alt="C# icon" title="C#" />
-              <p>C#</p>
             </div>
             <div class="iconGrp">
               <img src="./assets/unityLogo.svg" alt="Unity icon" title="Unity" />
