added pages for updated portfolio

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <!-- Header and landing -->
-    <header>
+    <header class="landingH">
       <div class="wrapper landingWords">
           <div class="hamburger">
             <div class="barOne"></div>
@@ -38,10 +38,11 @@
           <div class="navContainer">
             <nav>
               <ul class="nav">
-                <li class="liOne"><a href="#about"> About</a></li>
-                <li class="liTwo"><a href="#skills">Skills</a></li>
-                <li class="liThree"><a href="#projects">Projects</a></li>
-                <li class="liFour"><a href="#contact">Contact</a></li>
+                <li class="liOne"><a href="#"> Home</a></li>
+                <li class="liTwo"><a href="#about"> Logo's</a></li>
+                <li class="liThree"><a href="#skills">UX Design</a></li>
+                <li class="liFour"><a href="./webProj.html">Web Development</a></li>
+                <li class="liFive"><a href="#contact">Other Projects</a></li>
               </ul>
             </nav>
           </div>
@@ -241,7 +242,8 @@
       </section>
 
       <!-- Projects section -->
-      <section class="projects" id="projects">
+      <!-- 
+        <section class="projects" id="projects">
         <div class="wrapper">
           <h2>Projects</h2>
           <div class="projectGrouping">
@@ -473,6 +475,8 @@
         </div>
       </section>
 
+      -->
+      
       <!-- Contact section -->
       <section class="contact" id="contact">
         <div class="wrapper">
